<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0.01"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@drawable/calculator"
        android:contentDescription="@string/todo" />

    <EditText
        android:id="@+id/eT1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        android:hint="@string/primer_numero"
        android:gravity="center_horizontal"
        android:textSize="25sp"
        android:textColorHint="#424040"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.02"
        android:autofillHints="" />

    <EditText
        android:id="@+id/eT2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        android:hint="@string/segundo_numero"
        android:gravity="center_horizontal"
        android:textSize="25sp"
        android:textColorHint="#424040"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/eT1"
        app:layout_constraintVertical_bias="0.05"
        android:autofillHints="" />

    <Button
        android:id="@+id/btnAdicion"
        android:text="@string/adicion"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/eT2"
        app:layout_constraintVertical_bias="0.05"
        style="@style/buttonStyle" />
    <Button
        android:id="@+id/btnSustraccion"
        android:text="@string/sustraccion"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnAdicion"
        app:layout_constraintVertical_bias="0.05"
        style="@style/buttonStyle"/>
    <Button
        android:id="@+id/btnMultiplicacion"
        android:text="@string/multiplicacion"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSustraccion"
        app:layout_constraintVertical_bias="0.05"
        style="@style/buttonStyle"/>
    <Button
        android:id="@+id/btnDivision"
        android:text="@string/division"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnMultiplicacion"
        app:layout_constraintVertical_bias="0.05"
        style="@style/buttonStyle"/>

    <TextView
        android:id="@+id/tvResultado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/resultado"
        android:textColorHint="#000000"
        android:textSize="30sp"
        android:gravity="center_horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnDivision"
        app:layout_constraintVertical_bias="0.05" />
    <Button
        android:id="@+id/btnCerrar"
        android:text="@string/cerrar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvResultado"
        app:layout_constraintVertical_bias="0.05"
        style="@style/buttonStyle"/>

</androidx.constraintlayout.widget.ConstraintLayout>